--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,5 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+.swiftpm/xcode/xcshareddata/xcschemes/CountryCodesSwift-Package.xcscheme
+.swiftpm/xcode/xcshareddata/xcschemes/CountryCodesSwift.xcscheme
